# tictactoe_ling_yiqi

./: README.md  pyproject.toml
docs/: conf.py  example.ipynb
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/tictactoe_yl5733/: index.doctree
docs/_build/doctrees/autoapi/tictactoe_yl5733/tictactoe_yl5733/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/tictactoe_yl5733/: index.rst.txt
docs/_build/html/_sources/autoapi/tictactoe_yl5733/tictactoe_yl5733/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/tictactoe_yl5733/: index.html
docs/_build/html/autoapi/tictactoe_yl5733/tictactoe_yl5733/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/tictactoe_yl5733/: __init__.py  tictactoe_yl5733.py
tests/: test_tictactoe_yl5733.py
tictactoe_yl5733/: CHANGELOG.md  CONTRIBUTING.md
tictactoe_yl5733/.github/workflows/: ci.yml
tictactoe_yl5733/docs/: Makefile  conf.py  make.bat
