[tool.poetry]
name = "tictactoe_yl5733"
version = "0.1.0"
description = "This is a python package that managies and tests the core functionality of a tic-tac-toe game."
authors = ["Yiqi Ling"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
